--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,3 @@
 ReinforcementLearning/NHL/playerstats/offVSdef/Automatic_classification
 ReinforcementLearning/NHL/playbyplay/data/GAME_data.p
-
+ReinforcementLearning/NHL/playbyplay/data/stable/GAME_data.p
