--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,12 @@
+# backups
+*~
+
+# Byte-compiled / optimized / DLL files
+__pycache__/
+*.py[cod]
+*$py.class
+
+# 
 ReinforcementLearning/NHL/playerstats/offVSdef/Automatic_classification
 ReinforcementLearning/NHL/playbyplay/data/GAME_data.p
 ReinforcementLearning/NHL/playbyplay/data/stable/GAME_data.p
