--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,8 @@
 # Idea stuff
 .idea/
 **/.DS_Store
+ReinforcementLearning/NHL/playerstats/offVSdef/.DS_store
+ReinforcementLearning/NHL/playerstats/offVSdef/Automatic_classification/MODEL_perceptron_1layer_10units_relu/checkpoint
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
